Texture baking fails when using a "material_index" attribute and values assigned to faces refrerence a non-existent material slot #102214
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#102214
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11
Graphics card:
Blender Version
Broken: 3.3, 3.4
Short description of error
This thing tries to bake from a non existing material slot, the mesh has a
material_index
attribute and all faces have it set to 1{F13841290 size=full}
When the attribute is removed (or set to zero on all faces, OR if you have a second material slot with a valid material) then this works.
Rendering itself seems to ignore the "invalid"
material_index
(or just falls back to the first existing, havent checked)Exact steps for others to reproduce the error
from scratch:
OR for example:
Original report:
Load the .blend file
Select the object
Select the "BAKE" node
Render Properties -> Bake
The image comes out black
bake_bug_01112022_1321_56.zip
Added subscriber: @kursadk
Added subscriber: @PratikPB2123
Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'
Thanks for the report. I'm able to redo this. May not be a bug but I'm unable to find the cause. So forwarding reports to developers.
Added subscribers: @HooglyBoogly, @brecht, @lichtwerk
This thing tries to bake from a non existing material slot, the mesh has a
material_index
attribute and all faces have it set to 1{F13841290 size=full}
When the attribute is removed (or set to zero on all faces, OR if you have a second material slot with a valid material) then this works.
Rendering itself seems to ignore the "invalid"
material_index
(or just falls back to the first existing, havent checked)CC @HooglyBoogly
CC @brecht
Blender fails to bake texturesto Texture baking fails when using a "material_index" attribute and values assigned to faces refrerence a non-existent material slot@lichtwerk Thanks for investigating it. I think the material index is set to 1 because the mesh originally had multiple materials (which was imported as Alembic) and I deleted others and kept only one. I do not know why the material index attr would left a such residue.
Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
@kursadk Is there any chance you could give the specific steps that got the material index attribute into this state? Blender should be able to avoid this, and I think that's probably the best fix for this bug.
@HooglyBoogly, for example :
OR for example:
This issue was referenced by
dd7a10e5a5
This issue was referenced by
1fbb1d8cf6
I assumed this was a regression given the recent material index changes and versions mentioned in the description, but actually it seems not to be a new issue. So lowering the priority.
I think we should have consistent logic for how to deal with material index that exceeds the number of materials. I'll commit a fix for that.
@HooglyBoogly feel free to re-open if you want to work on ensuring the material indices are always within the range. Doing that for geometry nodes might be inconvenient for users or introduce some performance overhead though, not sure it's worth it.
Thanks Brecht.
I think we should never allow users to write negative indices anywhere. Geometry nodes should already do that.
But positive indices should be allowed, if you want to set them directly anyway. Most higher-level tools should probably be able to avoid creating these dangling indices though. There's probably some room to improve that in various places.
Changed status from 'Confirmed' to: 'Resolved'